--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -6,7 +6,7 @@
 <ul id="memos">
 @for(memo <- memos) {
 <li>
-  <a href='@(urlFor.apply("/memo/"))@(memo.id)'>@(memo.content.flatMap(_.split("""\r?\n""").headOption).getOrElse("")))</a> by @(memo.username.getOrElse("")) (@(memo.createdAt.toString("yyyy-MM-dd HH:mm:ss")))
+  <a href='@(urlFor.apply("/memo/"))@(memo.id)'>@(memo.title.getOrElse(""))</a> by @(memo.username.getOrElse("")) (@(memo.createdAt.toString("yyyy-MM-dd HH:mm:ss")))
 </li>
 }
 </ul>
